--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,22 +11,22 @@
     "\n",
     "ROOT = Path.cwd().resolve().parent      # repo root (..)\n",
     "DATA_DIR = ROOT / \"data\"\n",
-    "sys.path.insert(0, str(ROOT / \"src\"))   # add src to import path"
+    "sys.path.insert(0, str(ROOT / \"src\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datagen.build_data import build_and_save_synth\n",
-    "from datagen.constants import n_consumers, n_products"
+    "from datagen.build_data import generate_and_read_data\n",
+    "from datagen.constants import N_CONSUMERS, N_PRODUCTS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,42 +61,42 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>c_1</td>\n",
-       "      <td>a_853</td>\n",
-       "      <td>XS</td>\n",
+       "      <td>a_326</td>\n",
+       "      <td>S</td>\n",
        "      <td>too small</td>\n",
-       "      <td>2021-07-04</td>\n",
+       "      <td>2021-04-28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>c_1</td>\n",
-       "      <td>a_394</td>\n",
-       "      <td>M</td>\n",
-       "      <td>too large</td>\n",
-       "      <td>2021-08-03</td>\n",
+       "      <td>a_813</td>\n",
+       "      <td>S</td>\n",
+       "      <td>fit</td>\n",
+       "      <td>2021-06-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>c_1</td>\n",
-       "      <td>a_381</td>\n",
+       "      <td>a_13</td>\n",
        "      <td>S</td>\n",
        "      <td>fit</td>\n",
-       "      <td>2021-09-10</td>\n",
+       "      <td>2021-07-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>c_1</td>\n",
-       "      <td>a_455</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>too large</td>\n",
-       "      <td>2021-09-11</td>\n",
+       "      <td>a_599</td>\n",
+       "      <td>S</td>\n",
+       "      <td>too small</td>\n",
+       "      <td>2021-07-18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>c_1</td>\n",
-       "      <td>a_471</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>too large</td>\n",
-       "      <td>2021-11-03</td>\n",
+       "      <td>a_670</td>\n",
+       "      <td>XS</td>\n",
+       "      <td>too small</td>\n",
+       "      <td>2021-08-26</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -104,20 +104,20 @@
       ],
       "text/plain": [
        "  consumer_id product_id purchased_size fit_outcome transaction_date\n",
-       "0         c_1      a_853             XS   too small       2021-07-04\n",
-       "1         c_1      a_394              M   too large       2021-08-03\n",
-       "2         c_1      a_381              S         fit       2021-09-10\n",
-       "3         c_1      a_455            8.5   too large       2021-09-11\n",
-       "4         c_1      a_471            8.0   too large       2021-11-03"
+       "0         c_1      a_326              S   too small       2021-04-28\n",
+       "1         c_1      a_813              S         fit       2021-06-04\n",
+       "2         c_1       a_13              S         fit       2021-07-01\n",
+       "3         c_1      a_599              S   too small       2021-07-18\n",
+       "4         c_1      a_670             XS   too small       2021-08-26"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfs = build_and_save_synth(out_dir=DATA_DIR, n_consumers=n_consumers, n_products=n_products)\n",
+    "dfs = generate_and_read_data(out_dir=DATA_DIR, n_consumers=N_CONSUMERS, n_products=N_PRODUCTS)\n",
     "dfs[\"transactions\"].head()"
    ]
   }
