--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,105 +26,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>consumer_id</th>\n",
-       "      <th>product_id</th>\n",
-       "      <th>purchased_size</th>\n",
-       "      <th>fit_outcome</th>\n",
-       "      <th>transaction_date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>c_1</td>\n",
-       "      <td>a_326</td>\n",
-       "      <td>S</td>\n",
-       "      <td>too small</td>\n",
-       "      <td>2021-04-28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>c_1</td>\n",
-       "      <td>a_813</td>\n",
-       "      <td>S</td>\n",
-       "      <td>fit</td>\n",
-       "      <td>2021-06-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>c_1</td>\n",
-       "      <td>a_13</td>\n",
-       "      <td>S</td>\n",
-       "      <td>fit</td>\n",
-       "      <td>2021-07-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>c_1</td>\n",
-       "      <td>a_599</td>\n",
-       "      <td>S</td>\n",
-       "      <td>too small</td>\n",
-       "      <td>2021-07-18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>c_1</td>\n",
-       "      <td>a_670</td>\n",
-       "      <td>XS</td>\n",
-       "      <td>too small</td>\n",
-       "      <td>2021-08-26</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  consumer_id product_id purchased_size fit_outcome transaction_date\n",
-       "0         c_1      a_326              S   too small       2021-04-28\n",
-       "1         c_1      a_813              S         fit       2021-06-04\n",
-       "2         c_1       a_13              S         fit       2021-07-01\n",
-       "3         c_1      a_599              S   too small       2021-07-18\n",
-       "4         c_1      a_670             XS   too small       2021-08-26"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dfs = generate_and_read_data(out_dir=DATA_DIR, n_consumers=N_CONSUMERS, n_products=N_PRODUCTS)\n",
     "dfs[\"transactions\"].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sizerec.train import main\n",
+    "CFG = Path.cwd().resolve().parent / \"configs\" / \"transformer_base.yaml\"  # notebooks/ → repo/configs/\n",
+    "main(str(CFG))\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -138,7 +62,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
