--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,9 +36,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "A module that was compiled using NumPy 1.x cannot be run in\n",
+      "NumPy 2.0.2 as it may crash. To support both 1.x and 2.x\n",
+      "versions of NumPy, modules must be compiled with NumPy 2.0.\n",
+      "Some module may need to rebuild instead e.g. with 'pybind11>=2.12'.\n",
+      "\n",
+      "If you are a user of the module, the easiest solution will be to\n",
+      "downgrade to 'numpy<2' or try to upgrade the affected module.\n",
+      "We expect that some modules will need time to support NumPy 2.\n",
+      "\n",
+      "Traceback (most recent call last):  File \"/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/runpy.py\", line 197, in _run_module_as_main\n",
+      "    return _run_code(code, main_globals, None,\n",
+      "  File \"/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/runpy.py\", line 87, in _run_code\n",
+      "    exec(code, run_globals)\n",
+      "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/ipykernel_launcher.py\", line 18, in <module>\n",
+      "    app.launch_new_instance()\n",
+      "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/traitlets/config/application.py\", line 1075, in launch_instance\n",
+      "    app.start()\n",
+      "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/ipykernel/kernelapp.py\", line 739, in start\n",
+      "    self.io_loop.start()\n",
+      "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/tornado/platform/asyncio.py\", line 211, in start\n",
+      "    self.asyncio_loop.run_forever()\n",
+      "  File \"/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/asyncio/base_events.py\", line 596, in run_forever\n",
+      "    self._run_once()\n",
+      "  File \"/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/asyncio/base_events.py\", line 1890, in _run_once\n",
+      "    handle._run()\n",
+      "  File \"/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/asyncio/events.py\", line 80, in _run\n",
+      "    self._context.run(self._callback, *self._args)\n",
+      "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/ipykernel/kernelbase.py\", line 519, in dispatch_queue\n",
+      "    await self.process_one()\n",
+      "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/ipykernel/kernelbase.py\", line 508, in process_one\n",
+      "    await dispatch(*args)\n",
+      "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/ipykernel/kernelbase.py\", line 400, in dispatch_shell\n",
+      "    await result\n",
+      "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/ipykernel/ipkernel.py\", line 368, in execute_request\n",
+      "    await super().execute_request(stream, ident, parent)\n",
+      "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/ipykernel/kernelbase.py\", line 767, in execute_request\n",
+      "    reply_content = await reply_content\n",
+      "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/ipykernel/ipkernel.py\", line 455, in do_execute\n",
+      "    res = shell.run_cell(\n",
+      "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/ipykernel/zmqshell.py\", line 577, in run_cell\n",
+      "    return super().run_cell(*args, **kwargs)\n",
+      "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/IPython/core/interactiveshell.py\", line 3048, in run_cell\n",
+      "    result = self._run_cell(\n",
+      "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/IPython/core/interactiveshell.py\", line 3103, in _run_cell\n",
+      "    result = runner(coro)\n",
+      "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/IPython/core/async_helpers.py\", line 129, in _pseudo_sync_runner\n",
+      "    coro.send(None)\n",
+      "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/IPython/core/interactiveshell.py\", line 3308, in run_cell_async\n",
+      "    has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n",
+      "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/IPython/core/interactiveshell.py\", line 3490, in run_ast_nodes\n",
+      "    if await self.run_code(code, result, async_=asy):\n",
+      "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/IPython/core/interactiveshell.py\", line 3550, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"/var/folders/z6/j74r85d55_7d0c91mm6_8_mh0000gn/T/ipykernel_65047/279466607.py\", line 1, in <module>\n",
+      "    from sizerec.train import main\n",
+      "  File \"/Users/amandamagzal/size-fit-rec/src/sizerec/train.py\", line 29, in <module>\n",
+      "    import torch\n",
+      "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/torch/__init__.py\", line 1477, in <module>\n",
+      "    from .functional import *  # noqa: F403\n",
+      "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/torch/functional.py\", line 9, in <module>\n",
+      "    import torch.nn.functional as F\n",
+      "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/torch/nn/__init__.py\", line 1, in <module>\n",
+      "    from .modules import *  # noqa: F403\n",
+      "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/torch/nn/modules/__init__.py\", line 35, in <module>\n",
+      "    from .transformer import TransformerEncoder, TransformerDecoder, \\\n",
+      "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/torch/nn/modules/transformer.py\", line 20, in <module>\n",
+      "    device: torch.device = torch.device(torch._C._get_default_device()),  # torch.device('cpu'),\n",
+      "/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/torch/nn/modules/transformer.py:20: UserWarning: Failed to initialize NumPy: _ARRAY_API not found (Triggered internally at /Users/runner/work/pytorch/pytorch/pytorch/torch/csrc/utils/tensor_numpy.cpp:84.)\n",
+      "  device: torch.device = torch.device(torch._C._get_default_device()),  # torch.device('cpu'),\n",
+      "/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/torch/nn/modules/transformer.py:286: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.norm_first was True\n",
+      "  warnings.warn(f\"enable_nested_tensor is True, but self.use_nested_tensor is False because {why_not_sparsity_fast_path}\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model params: 3,210,244\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/torch/cuda/amp/grad_scaler.py:126: UserWarning: torch.cuda.amp.GradScaler is enabled, but CUDA is not available.  Disabling.\n",
+      "  warnings.warn(\n",
+      "/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/torch/amp/autocast_mode.py:250: UserWarning: User provided device_type of 'cuda', but CUDA is not available. Disabling\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 001 | train_loss=5.5708  val_loss=3.0447  val_acc=0.2568\n",
+      "Epoch 002 | train_loss=1.8106  val_loss=1.5758  val_acc=0.2486\n",
+      "Epoch 003 | train_loss=1.3990  val_loss=1.6134  val_acc=0.3054\n",
+      "Epoch 004 | train_loss=1.3069  val_loss=1.7002  val_acc=0.3514\n",
+      "Epoch 005 | train_loss=1.1559  val_loss=1.6182  val_acc=0.3459\n",
+      "Epoch 006 | train_loss=1.0574  val_loss=1.7072  val_acc=0.2946\n",
+      "Epoch 007 | train_loss=0.9529  val_loss=1.7139  val_acc=0.3162\n",
+      "Early stopping.\n",
+      "val: acc=0.3162, macroF1=0.2989\n",
+      "test: acc=0.3091, macroF1=0.2575\n",
+      "Run artifacts saved to: artifacts/runs/20250908-210512\n"
+     ]
+    }
+   ],
    "source": [
     "from sizerec.train import main\n",
     "CFG = Path.cwd().resolve().parent / \"configs\" / \"transformer_base.yaml\"  # notebooks/ → repo/configs/\n",
@@ -48,7 +161,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -62,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
