--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -97,7 +97,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/IPython/core/interactiveshell.py\", line 3550, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/var/folders/z6/j74r85d55_7d0c91mm6_8_mh0000gn/T/ipykernel_65047/279466607.py\", line 1, in <module>\n",
+      "  File \"/var/folders/z6/j74r85d55_7d0c91mm6_8_mh0000gn/T/ipykernel_67524/4004315380.py\", line 1, in <module>\n",
       "    from sizerec.train import main\n",
       "  File \"/Users/amandamagzal/size-fit-rec/src/sizerec/train.py\", line 29, in <module>\n",
       "    import torch\n",
@@ -138,24 +138,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 001 | train_loss=5.5708  val_loss=3.0447  val_acc=0.2568\n",
-      "Epoch 002 | train_loss=1.8106  val_loss=1.5758  val_acc=0.2486\n",
-      "Epoch 003 | train_loss=1.3990  val_loss=1.6134  val_acc=0.3054\n",
-      "Epoch 004 | train_loss=1.3069  val_loss=1.7002  val_acc=0.3514\n",
-      "Epoch 005 | train_loss=1.1559  val_loss=1.6182  val_acc=0.3459\n",
-      "Epoch 006 | train_loss=1.0574  val_loss=1.7072  val_acc=0.2946\n",
-      "Epoch 007 | train_loss=0.9529  val_loss=1.7139  val_acc=0.3162\n",
+      "Epoch 001 | train_loss=6.5163  val_loss=2.9744  val_acc=0.2757\n",
+      "Epoch 002 | train_loss=2.1806  val_loss=1.9652  val_acc=0.3243\n",
+      "Epoch 003 | train_loss=1.5571  val_loss=1.7367  val_acc=0.3108\n",
+      "Epoch 004 | train_loss=1.3308  val_loss=1.6973  val_acc=0.3459\n",
+      "Epoch 005 | train_loss=1.1393  val_loss=1.6219  val_acc=0.3757\n",
+      "Epoch 006 | train_loss=1.0370  val_loss=1.8051  val_acc=0.3162\n",
+      "Epoch 007 | train_loss=0.9291  val_loss=1.7236  val_acc=0.3595\n",
+      "Epoch 008 | train_loss=0.8059  val_loss=1.9068  val_acc=0.3270\n",
+      "Epoch 009 | train_loss=0.7143  val_loss=2.0375  val_acc=0.3324\n",
+      "Epoch 010 | train_loss=0.6472  val_loss=2.1417  val_acc=0.3081\n",
       "Early stopping.\n",
-      "val: acc=0.3162, macroF1=0.2989\n",
-      "test: acc=0.3091, macroF1=0.2575\n",
-      "Run artifacts saved to: artifacts/runs/20250908-210512\n"
+      "val: acc=0.3081, macroF1=0.2623\n",
+      "test: acc=0.3898, macroF1=0.3325\n",
+      "Run artifacts saved to: artifacts/runs/20250908-212909\n"
      ]
     }
    ],
    "source": [
     "from sizerec.train import main\n",
     "CFG = Path.cwd().resolve().parent / \"configs\" / \"transformer_base.yaml\"  # notebooks/ → repo/configs/\n",
-    "main(str(CFG))\n"
+    "main(str(CFG))"
    ]
   }
  ],
