--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -6,29 +6,103 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "import sys\n",
-    "\n",
-    "ROOT = Path.cwd().resolve().parent      # repo root (..)\n",
-    "DATA_DIR = ROOT / \"data\"\n",
-    "sys.path.insert(0, str(ROOT / \"src\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from sizerec.paths import DATA_DIR\n",
     "from datagen.build_data import generate_and_read_data\n",
     "from datagen.constants import N_CONSUMERS, N_PRODUCTS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>consumer_id</th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>purchased_size</th>\n",
+       "      <th>fit_outcome</th>\n",
+       "      <th>transaction_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>c_1</td>\n",
+       "      <td>a_326</td>\n",
+       "      <td>S</td>\n",
+       "      <td>too small</td>\n",
+       "      <td>2021-04-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>c_1</td>\n",
+       "      <td>a_813</td>\n",
+       "      <td>S</td>\n",
+       "      <td>fit</td>\n",
+       "      <td>2021-06-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>c_1</td>\n",
+       "      <td>a_13</td>\n",
+       "      <td>S</td>\n",
+       "      <td>fit</td>\n",
+       "      <td>2021-07-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>c_1</td>\n",
+       "      <td>a_599</td>\n",
+       "      <td>S</td>\n",
+       "      <td>too small</td>\n",
+       "      <td>2021-07-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>c_1</td>\n",
+       "      <td>a_670</td>\n",
+       "      <td>XS</td>\n",
+       "      <td>too small</td>\n",
+       "      <td>2021-08-26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  consumer_id product_id purchased_size fit_outcome transaction_date\n",
+       "0         c_1      a_326              S   too small       2021-04-28\n",
+       "1         c_1      a_813              S         fit       2021-06-04\n",
+       "2         c_1       a_13              S         fit       2021-07-01\n",
+       "3         c_1      a_599              S   too small       2021-07-18\n",
+       "4         c_1      a_670             XS   too small       2021-08-26"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dfs = generate_and_read_data(out_dir=DATA_DIR, n_consumers=N_CONSUMERS, n_products=N_PRODUCTS)\n",
     "dfs[\"transactions\"].head()"
@@ -36,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +171,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"/Users/amandamagzal/size-fit-rec/.venv/lib/python3.9/site-packages/IPython/core/interactiveshell.py\", line 3550, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/var/folders/z6/j74r85d55_7d0c91mm6_8_mh0000gn/T/ipykernel_67524/4004315380.py\", line 1, in <module>\n",
+      "  File \"/var/folders/z6/j74r85d55_7d0c91mm6_8_mh0000gn/T/ipykernel_69874/572878121.py\", line 1, in <module>\n",
       "    from sizerec.train import main\n",
       "  File \"/Users/amandamagzal/size-fit-rec/src/sizerec/train.py\", line 29, in <module>\n",
       "    import torch\n",
@@ -151,14 +225,13 @@
       "Early stopping.\n",
       "val: acc=0.3081, macroF1=0.2623\n",
       "test: acc=0.3898, macroF1=0.3325\n",
-      "Run artifacts saved to: artifacts/runs/20250908-212909\n"
+      "Run artifacts saved to: /Users/amandamagzal/size-fit-rec/artifacts/runs/20250908-215108\n"
      ]
     }
    ],
    "source": [
     "from sizerec.train import main\n",
-    "CFG = Path.cwd().resolve().parent / \"configs\" / \"transformer_base.yaml\"  # notebooks/ → repo/configs/\n",
-    "main(str(CFG))"
+    "main()"
    ]
   }
  ],
